--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn[standard]
-transformers
-redis
-python-dotenv 
+flask
+langchain
+langchain-community
+langchain-openai
+Faker
+gradio
